# ProvMark-A-Zero-Knowledge-Public-Audit-Framework-for-Authenticating-Agent-Generated-Code

./: README.md  batch_refactor.py  bit_accuracy_on_selected.py  calc_recovery_rate.py  calculate_auroc_tpr.py  capacity_from_generations.py  compute_bit_accuracy.py  compute_bit_recovery_rate.py  compute_one_witness_row.py  compute_table_from_witness.py  decode_on_positives.py  export_selected_samples.py  filter_eval_by_taskidx.py  fixedset_bimark_decode.py  generate_zkp_data.py  main.py  make_attacked_generations.py  paraphrase_attacks.py  plot_auroc_grouped_bars.py  plot_zk_time_compare.py  refactor_deepseek.py  select_joint_syntax_subset.py  sweet.py  sweet_bimark.py  validate_zkp_data.py  zkp_extractor.py
ProvMark_SE-SNARK/: Cargo.toml  main.rs
lm_eval/: base.py  evaluator.py  generation.py  utils.py
lm_eval/tasks/: multiple.py
lm_eval/tasks/custom_metrics/multiple_metrics/: eval_java.py
