[package]
name = "provmark-zkp"
version = "0.2.0"
edition = "2021"

[dependencies]
ark-ff = "0.3"
ark-ec = "0.3"
ark-serialize = "0.3"
ark-relations = "0.3"
ark-r1cs-std = "0.3"
ark-snark = "0.3"

ark-bls12-381 = "0.3"
ark-gm17 = "0.3"

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
